--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -3,6 +3,20 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
+
+<!-- Este style deve ser removido. criei só para ilustrar os status de jobs (fabio) -->
+<style type="text/css">
+	div.status_running {
+		color: green;
+		background-color: #88FF88 }
+
+	div.status_ok {
+		color: green;}
+	div.status_error {
+		color: red;}
+
+</style>
+
 {% endblock %}
 
 {% block page %}
