--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -57,7 +57,7 @@
                             <input type="submit" class="submit tiny" value="Restaurar" />
                         </form>
                         {% endif %}
-                        <a href="/backup/add/{{ comp.id }}" class="floatright submit tiny">Criar Backup</a>
+                        <a href="/procedures/add/" class="floatright submit tiny">Criar Backup</a>
                         
                     </div>
                     {% if not comp.procedure_set.count %}
@@ -71,19 +71,15 @@
                                 <div class="title">
                                     <a href="#" class="toggle" ref="fileset_detail">
                                         <img src="/media/icons/folder.png" alt=""/>
-                                        <h4 class="name">{{proc.profile.fileset}}</h4>
-                                        <small class="ip">{% for file in proc.profile.fileset.files.all|slice:":3" %}{{file.path}} - {% endfor %}</small>
+                                        <h4 class="name">{{proc.fileset.name}}</h4>
+                                        <small class="ip">{% for file in proc.fileset.files.all|slice:":3" %}{{file.path}} - {% endfor %}</small>
                                     </a>
                                 </div>
                                 <div class="fileset_detail">
                                     <br/>
                                     Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
-                                    Perfil de configuração: <strong>{{proc.profile.name}}</strong> <small>(<a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">editar</a>)</small><br/>
-                                    Local de armazenamento: <strong><a href="/storages/{{proc.profile.storage.id}}/view"><span title="Endereço: {{proc.profile.storage.address}} - {{proc.profile.storage.description|slice:":25"}}...">{{proc.profile.storage.name}}</span></a></strong><br/>
-                                    Agendamento: <strong>{{proc.profile.schedule}}</strong> <small>(<a href="{% url nimbus.schedules.views.edit object_id=proc.profile.schedule.id %}">editar</a>)</small><br/>
-                                    Arquivos: <small>(<a href="{% url nimbus.filesets.views.edit object_id=proc.profile.fileset.id %}">editar</a>)</small>
                                     <ul>
-                                        {% for file in proc.profile.fileset.files.all %}
+                                        {% for file in proc.fileset.files.all %}
                                         <li><strong>{{file}}</strong></li>
                                         {% endfor %}
                                     </ul>
