Formulários do wizard dentro do novo padrão e bugs de layout da wizard foram removidos.

--- a/nimbus/base/templates/form.html
+++ b/nimbus/base/templates/form.html
@@ -6,7 +6,7 @@
             <p class="error">{{ error }}</p>
         {% endfor %}
     {% endif %}
-    <p>{{ field.label_tag }}<br/>{{ field }}</p>
+    <p><label>{{ field.label_tag }}</label><br/>{{ field }}</p>
 {% endfor %}
 {% for hidden in form.hidden_fields %}
     {{ hidden }}
