Tempo de retenção muito alto na adição do backup agora mostra um erro amigável

--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -63,7 +63,7 @@
 	    </div>
 	    <div class="pool_new_value">
 	    	<label>Tempo de retencao (em dias):</label><br />
-	        <input type="text" name="pool_retention_alt" id="pool_retention_alt" value="" class="text small" /><br />
+	        <input type="text" name="pool_retention_alt" id="pool_retention_alt" maxlength="4" value="" class="text small" /><br />
 	    </div>
 	    <hr />
         <p>
