FIX: Formato de datas no formulário de restauração

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="/media/js/iphone-style-checkboxes/style.css" />
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/uniform.default.css" />
+	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
 	
 	
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
