--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -30,7 +30,12 @@
 			<hr />
 			<h2>Adicionar novos aquivos:</h2>
 			<ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
-            {{ fileset_form.as_p }}
+			<p>
+			<label>{{fileset_form.name.label}}: </label>{{ fileset_form.name }}
+			</p>
+			<p class="hidden">
+			<label>{{fileset_form.is_model.label}}: </label>{{ fileset_form.is_model }}
+			</p>
 			<hr />
 			<p>
 				<!-- <input type="submit" class="submit mid" id="submit_button" value="Salvar"/> -->
