--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -2,6 +2,7 @@
 
 {% block headtags %}
 <script type="text/javascript" src="/media/js/procedures.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
 {% endblock %}
 
@@ -76,7 +77,7 @@
 			{% endfor %}
 		</div><!-- .procedure -->
         
-        <h2 class="floatleft">Agendamentos</h2>&nbsp;<a href="/schedules/add/" class="minibutton"><span>Adicionar</span></a>
+        <h2 class="floatleft">Agendamentos</h2>&nbsp;<a href="/schedules/add/" class="minibutton edit-schedule"><span>Adicionar</span></a>
 		<div class="clear"></div><hr />
         <!-- real env for schedules -->
 		<div class="schedule">
